--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -633,6 +633,11 @@ section {
 .features .content p:last-child {
   margin-bottom: 0;
 }
+.features .img-fluid {
+  width: 70%;
+  height: 600px; 
+
+}
 
 /*--------------------------------------------------------------
 # Portfolio
