--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -530,11 +530,16 @@ section {
   background: url("../img/My_video.mp4") center center no-repeat;
   background-size: cover;
   min-height: 400px;
-
 }
 .video {
   height: auto;
   width: 80%;
+
+}
+.text-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 @media (max-width: 667px) {
   .about .image img {
@@ -639,10 +644,10 @@ section {
 .features .content p:last-child {
   margin-bottom: 0;
 }
-/* .features .img-fluid {
-  width: 70%;
-  height: 600px; 
-} */
+.features .img-fluid {
+  width: 100%;
+  height: 300px; 
+} 
 /* .card-img-overlay .img-fluid {
   height: 400px;
   width: 50%;
@@ -1019,7 +1024,7 @@ section {
 .contact .info-box p {
   padding: 0;
   line-height: 24px;
-  font-size: 14px;
+  font-size: 11px;
   margin-bottom: 0;
 }
 .contact .php-email-form {
