--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
 }
 
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
@@ -304,7 +305,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 650px;
-  padding: 0 0 0 0;
+  padding: 0 0 0 20px;
   background: #213b52;
   background: linear-gradient(180deg, #213b52 0%, #213c54 35%, #204564 100%);
 }
@@ -644,10 +645,10 @@ section {
 .features .content p:last-child {
   margin-bottom: 0;
 }
-.features .img-fluid {
+/* .img-fluid {
   width: 100%;
-  height: 300px; 
-} 
+  height: auto; 
+}  
 /* .card-img-overlay .img-fluid {
   height: 400px;
   width: 50%;
@@ -1026,6 +1027,9 @@ section {
   line-height: 24px;
   font-size: 11px;
   margin-bottom: 0;
+}
+a {
+  color: #777777;
 }
 .contact .php-email-form {
   box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
