--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,39 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
 }
 
-
+.switch {
+  position: absolute;
+  top: 11px;
+  right: -20px;
+  background: #fff;
+  border: 2px solid #00151f;
+  width: 45px;
+  height: 20px;
+  cursor: pointer;
+  border-radius: 20px;
+  transition: 0.5s;
+}
+.switch.active
+{
+    background: #00151f;
+    border: 2px solid #fff;
+}
+.switch:before
+{
+    content: '';
+    position: absolute;
+    left: 2px;
+    width: 16px;
+    height: 16px;
+    background: #00151f;
+    border-radius: 50%;
+    transition: 0.5s;
+}
+.switch.active:before
+{
+    left: 27px;
+    background: #fff;
+}
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
@@ -75,6 +107,7 @@ h1, h2, h3, h4, h5, h6 {
   transition: all 0.5s;
   padding: 16px 0;
   background: #213b52;
+  position: relative;
 }
 #header .logo h1 {
   font-size: 24px;
@@ -98,6 +131,18 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   max-height: 40px;
 }
+/* .switch {
+  position: absolute;
+  top: -11px;
+  right: 15px;
+  background: #fff;
+  border: 2px solid #00151f;
+  width: 45px;
+  height: 20px;
+  cursor: pointer;
+  border-radius: 20px;
+  transition: 0.5s;
+} */
 
 /*--------------------------------------------------------------
 # Navigation Menu
@@ -224,6 +269,7 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 991px) {
   .mobile-nav-toggle {
     display: block;
+
   }
 
   .navbar ul {
@@ -376,6 +422,7 @@ h1, h2, h3, h4, h5, h6 {
   /* #hero .hero-img img {
     width: 80%;
   } */
+
 }
 
 
