--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,12 @@ h1, h2, h3, h4, h5, h6 {
     left: 27px;
     background: #fff;
 }
+body.night 
+{
+    background: #00151f;
+    color: #fff;
+}
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
