--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,11 +61,27 @@ h1, h2, h3, h4, h5, h6 {
     left: 27px;
     background: #fff;
 }
-body.night 
-{
-    background: #00151f;
-    color: #fff;
+body.night {
+    background-color: #00151f;
+    /* color: #fff; */
 }
+
+header.night {
+  background-color: #00151f;
+    /* color: #fff; */
+}
+
+#hero.night {
+  background-color: #00151f;
+  /* color: #fff; */
+}
+footer.night {
+  background-color: #00151f;
+    /* color: #fff; */
+}
+/* body.night #header, #hero, .section-bg {
+  color: black !important;
+} */
 
 /*--------------------------------------------------------------
 # Back to top button
@@ -108,14 +124,14 @@ body.night
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
-#header {
+header {
   z-index: 997;
-  transition: all 0.5s;
+  /* transition: all 0.5s; */
   padding: 16px 0;
   background: #213b52;
   position: relative;
 }
-#header .logo h1 {
+header .logo h1 {
   font-size: 24px;
   margin: 0;
   padding: 10px 0;
@@ -125,14 +141,14 @@ body.night
   text-transform: none;
   font-family: "Poppins", sans-serif;
 }
-#header .logo h1 a, #header .logo h1 a:hover {
+header .logo h1 a, header .logo h1 a:hover {
   color: #fff;
   text-decoration: none;
 }
-#header .logo h1 a span, #header .logo h1 a:hover span {
+header .logo h1 a span, header .logo h1 a:hover span {
   color: #fdc134;
 }
-#header .logo img {
+header .logo img {
   padding: 0;
   margin: 0;
   max-height: 40px;
@@ -359,7 +375,7 @@ body.night
   height: 650px;
   padding: 0 0 0 20px;
   background: #213b52;
-  background: linear-gradient(180deg, #213b52 0%, #213c54 35%, #204564 100%);
+  /* background: linear-gradient(180deg, #213b52 0%, #213c54 35%, #204564 100%); */
 }
 /*#hero .container {
   position: relative;
@@ -440,9 +456,9 @@ section {
   overflow: hidden;
 }
 
-.section-bg {
+/* .section-bg {
   background: linear-gradient(180deg, #f2f6fa 0%, #fff 100%);
-}
+} */
 
 .section-title {
   text-align: center;
