--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,14 +28,14 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
 }
 
-.switch {
+/* .switch {
   position: absolute;
-  top: 11px;
-  right: -20px;
-  background: #fff;
-  border: 2px solid #00151f;
-  width: 45px;
-  height: 20px;
+  top: 5px;
+  right: -35px;
+  background: black;
+  border: 2px solid #fff;
+  width: 60px;
+  height: 30px;
   cursor: pointer;
   border-radius: 20px;
   transition: 0.5s;
@@ -43,30 +43,29 @@ h1, h2, h3, h4, h5, h6 {
 }
 .switch.active
 {
-    background: #00151f;
-    border: 2px solid #fff;
+    background: #fff;
+    border: 2px solid #9EBED8;
 }
 .switch:before
 {
     content: '';
     position: absolute;
     left: -2px;
-    width: 16px;
-    height: 16px;
-    background: #00151f;
+    width: 28px;
+    height: 26px;
+    background: #fff;
     border-radius: 50%;
     transition: 0.5s;
-}
+} 
 .switch.active:before
 {
-    left: 27px;
-    background: #fff;
-}
+    left: 30px;
+    background: black;
+} */
 body.night {
     background-color: #00151f;
      color: #fff; 
 }
-
 body.night .about .content .icon-box p{
   background-color: #00151f;
    color: #fff; 
@@ -113,9 +112,41 @@ body.night .form-control {
 body.night a {
   color: #fff;
 }
-.label {
-  
+.switch {
+  font-size: 25px;
+  color: #fff;
+  position: absolute;
+  top: 6px;
+  right: -20px;
+  cursor: pointer;
 }
+ /*#s-icon {
+  font-size: 23px;
+  color: rgb(255, 255, 1);
+  display: none;
+  position: absolute;
+  top: 2px;
+  right: 3px;
+} */
+
+/* .moon {
+  font-size: 24px;
+  margin-left: 25px;
+  cursor: pointer;
+  color: #fff;
+} */
+
+/* .toggle {
+  font-size: 24px;
+  margin-left: 25px;
+  cursor: pointer;
+  color: #fff;
+  display: block;
+} */
+/* .s-icon {
+  display: none;
+} */
+
 /* footer.night {
   background-color: #00151f;
     color: #fff;
@@ -123,6 +154,36 @@ body.night a {
 /* body.night #header, #hero, .section-bg {
   color: black !important;
 } */
+
+@media screen and (max-width: 425px) {
+  /* [data-aos-delay] {
+    transition-delay: 0 !important;
+  } */
+
+  .switch {
+    font-size: 25px;
+    color: #fff;
+    position: absolute;
+    top: -13px;
+    right: 40px;
+    cursor: pointer;
+  } 
+}
+
+/* @media screen and (max-width: 828px) {
+  /* [data-aos-delay] {
+    transition-delay: 0 !important;
+  } */
+
+  /* .switch {
+    font-size: 25px;
+    color: #fff;
+    position: absolute;
+    top: -12px;
+    right: -20px;
+    cursor: pointer;
+  } */
+
 
 /*--------------------------------------------------------------
 # Back to top button
@@ -160,6 +221,15 @@ body.night a {
 @media screen and (max-width: 768px) {
   [data-aos-delay] {
     transition-delay: 0 !important;
+  }
+
+  .switch {
+    font-size: 25px;
+    color: #fff;
+    position: absolute;
+    top: -13px;
+    right: 20px;
+    cursor: pointer;
   }
 }
 /*--------------------------------------------------------------
